@@ -11,6 +11,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
     http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
   Fixed to use correct scripts during test and so avoid permissions
     issues, thanks to David Golden.
+  Fixed suprious "Unable to determine line number" warnings
+    when using options like -p, -n, -Mfoo.
 
   Changed enable_profile() to discard the time spent since
     profile was disabled.
